- 
    Bug 
- 
    Resolution: Done
- 
    P2: Important 
- 
    6.1.0 Beta3
- 
        
- 
        dff579147b (qt/qtwayland/dev) b529ae8b8e (qt/qtwayland/6.3) b529ae8b8e (qt/tqtc-qtwayland/6.3) dff579147b (qt/tqtc-qtwayland/dev)
- 
        Qt Quick 3D - 2021 Week 15/16, Qt Quick 3D - 2021 Week 17/18, Qt Quick 3D - 2021 Week 21/22, Wayland Project - Backlog task
All quick3d examples will sometimes crash or hang on exit when using Wayland on Linux. Using X11 works fine. Note that this only happens when running the threaded render loop.
These are the backtraces:
OpenGL - crash
1 ?? 0x7fffee6672cd 
 2 ?? 0x7fffee667864 
 3 ?? 0x7fffece9e491 
 4 ?? 0x7fffece96994 
 5 ?? 0x7fffecef5afb 
 6 ?? 0x7fffecef6e7f 
 7 ?? 0x7fffecf2b045 
 8 ?? 0x7fffecf2c29e 
 9 QOpenGLFunctions::glClear qopenglfunctions.h 624 0x7ffff54004a9 
 10 QRhiGles2::executeCommandBuffer qrhigles2.cpp 2695 0x7ffff53edd95 
 11 QRhiGles2::endFrame qrhigles2.cpp 1664 0x7ffff53ef876 
 12 QRhi::endFrame qrhi.cpp 6463 0x7ffff51a0f19 
 13 QSGRenderThread::syncAndRender qsgthreadedrenderloop.cpp 796 0x7ffff6ef2fc8 
 14 QSGRenderThread::run qsgthreadedrenderloop.cpp 987 0x7ffff6ef3f3e 
 15 QThreadPrivate::start qthread_unix.cpp 330 0x7ffff47ff868 
 16 start_thread 0x7ffff3fbc299 
 17 clone 0x7ffff3ee5053
Vulkan - hangs
1 poll 0x7ffff3eda37f 
 2 wl_display_dispatch_queue 0x7ffff0a9ff46 
 3 ?? 0x7fffccb14774 
 4 ?? 0x7fffcccfdb23 
 5 ?? 0x7fffcc98e2db 
 6 QRhiVulkan::endFrame qrhivulkan.cpp 1892 0x7ffff55dd975 
 7 QRhi::endFrame qrhi.cpp 6463 0x7ffff51a0f19 
 8 QSGRenderThread::syncAndRender qsgthreadedrenderloop.cpp 796 0x7ffff6ef2fc8 
 9 QSGRenderThread::run qsgthreadedrenderloop.cpp 987 0x7ffff6ef3f3e 
 10 QThreadPrivate::start qthread_unix.cpp 330 0x7ffff47ff868 
 11 start_thread 0x7ffff3fbc299 
 12 clone 0x7ffff3ee5053
- is duplicated by
- 
                    QTBUG-109968 Crash running rendernode example under Wayland -           
- Closed
 
-         
- relates to
- 
                    QTBUG-90037 Crash when hiding QtQuick window with wayland/EGL -         
- Closed
 
-         
- 
                    QTBUG-81373 qt3d exampls have segmentation fault -         
- Closed
 
-